--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 
 
   <!-- ضع العنوان الخاص بك هنا  -->
-  <title> غير هذا النص </title> 
-  <meta name="title" content="غير هذا النص">
-  <meta property="twitter:title" content="غير هذا النص"> 
-  <meta property="og:title" content="غير هذا النص">
+  <title>messngeeerr </title> 
+  <meta name="title" content="messngeeerr">
+  <meta property="twitter:title" content="messngeeerr"> 
+  <meta property="og:title" content="messngeeerr">
 
 
   <!-- ضع الوصف الخاص بك هنا  -->
-  <meta name="description" content="غير هذا النص">
-  <meta property="og:description" content="غير هذا النص">
-  <meta property="twitter:description" content="غير هذا النص">
+  <meta name="description" content="messngeeerr">
+  <meta property="og:description" content="messngeeerr">
+  <meta property="twitter:description" content="messngeeerr">
 
   <!-- ضع الرابط المرفوع عليه الموقع -->
-  <meta property="og:url" content="ضع الرابط كامل">
-  <meta property="twitter:url" content="ضع الرابط كامل">
+  <meta property="og:url" content="https://messngeeerr.github.io/">
+  <meta property="twitter:url" content="https://messngeeerr.github.io/">
 
   <!-- رابط الصورة المعروضة في اللينك -->
-  <meta property="og:image" content="رابط الصورة">
-  <meta property="twitter:image" content="رابط الصورة">
+  <meta property="og:image" content="https://1.bp.blogspot.com/-cyi1lu2UEYA/YHcrAgN0ZNI/AAAAAAAAFfA/1a7X0yApia8FzU8Gc56ul1VlVr1FmtOZQCLcBGAsYHQ/s1920/172903568_100415088850899_8517701037627066036_n.png">
+  <meta property="twitter:image" content="https://1.bp.blogspot.com/-cyi1lu2UEYA/YHcrAgN0ZNI/AAAAAAAAFfA/1a7X0yApia8FzU8Gc56ul1VlVr1FmtOZQCLcBGAsYHQ/s1920/172903568_100415088850899_8517701037627066036_n.png">
 
   <meta property="twitter:card" content="summary_large_image">
   <meta property="og:type" content="website">
